[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/Icons/ColorPickerMask.png" type="Texture" id=1]
[ext_resource path="res://GUI/CustomNodes/ColorInterface/OffsetInterface.gd" type="Script" id=2]

[node name="OffsetInterface" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 1600.0
margin_bottom = 14.0
text = "Offset Name"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 18.0
margin_right = 1600.0
margin_bottom = 68.0
alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer"]
margin_left = 775.0
margin_right = 825.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
flat = true

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ColorPickerButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -22.5
margin_right = 22.5
margin_bottom = 22.5
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 72.0
margin_right = 1600.0
margin_bottom = 86.0
text = "Blend"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 90.0
margin_right = 1600.0
margin_bottom = 106.0
alignment = 1

[node name="HSlider" type="HSlider" parent="HBoxContainer2"]
margin_left = 750.0
margin_right = 850.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.001
value = 0.5

[connection signal="color_changed" from="HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="value_changed" from="HBoxContainer2/HSlider" to="." method="_on_HSlider_value_changed"]
